WIP: domain update
